# mandy

./: .gitignore  AGENTS.md  README.md  biome.json  index.html  knip.json  package-lock.json  package.json
.github/: PULL_REQUEST.md
.github/workflows/: build.yml
scripts/: biome-fix-buttons.mjs
src/: App.css  App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  macos.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_focus.rs  app_menu.rs  dock_badge.rs  lib.rs  macos_about_panel.rs  macos_appearance.rs  macos_tahoe_icon.rs  main.rs  notifications.rs  types.rs  window.rs
src-tauri/src/helpers/: graphql.rs  mod.rs  mqtt.rs  request_notify.rs  rest.rs  socketio.rs  websocket.rs
src/components/: AuthEditor.tsx  BodyEditor.tsx  Checkbox.tsx  CodeEditor.tsx  CodeViewer.tsx  ContextMenu.tsx  Dropdown.tsx  EnvInput.tsx  FileTree.tsx  HeaderActivityMenu.tsx  KeyValueTable.tsx  MethodSelector.tsx  OverviewModal.tsx  ProjectOverview.tsx  ProtocolToggle.tsx  RequestOverview.tsx  Sidebar.tsx  SizePopover.tsx  TimingPopover.tsx  WelcomePage.tsx
src/helpers/: RESTRequest.ts  codeUtils.ts
src/hooks/: useListContainerSize.ts  useMessageFilters.ts  usePrefersDarkMode.ts  useWebSocket.ts  useWorkflowHistory.ts
src/migration/: index.ts
src/realtime/: backgroundSessionIds.ts  globalRealtimeBridge.ts  realtimeUiBus.ts  wsExclusiveLock.ts
src/registry/: editorViews.tsx  index.ts  itemTypes.ts  registryCore.ts  requestTypeIcon.tsx
src/reqhelpers/: index.ts  rest.ts
src/stores/: projectStore.ts  (+1 more)
(+119 files in other folders)
